--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -13,7 +13,7 @@
 
 .navigation li {
     font-size: 24px;
-    font-weight: 500;
+    font-weight: bold;    
     color: black;
     padding: 15px;
     border-radius: 10px;
@@ -21,6 +21,7 @@
 
     @media all and (max-width: 768px){
         font-size: 16px;
+        font-weight: bold;
     }
 
     &:hover{
