--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -20,16 +20,20 @@ body {
   }
 
 header {
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 80px;
+    padding-right: 80px;
     margin: 50px auto;
     display: flex;
     justify-content: space-between;
+    @media all and (max-width: 768px){
+        padding-left: 50px;
+        padding-right: 50px;
+    }
 }
 
 main {
-    padding-left: 50px;
-    padding-right: 60px;
+    padding-left: 5px;
+    padding-right: 5px;
     margin: 0 auto;
 
 }
